<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/imgViewInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pic_covid_title"
        app:srcCompat="@drawable/covid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp">

        <Button
            android:id="@+id/btnOpcionTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_medicion_temperatura" />

        <Button
            android:id="@+id/btnOpcionConv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_conversor" />

        <Button
            android:id="@+id/btnOpcionConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_configuracion" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnOpcionCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/txt_btn_cerrar_session" />

    </LinearLayout>

</LinearLayout>