<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <ImageView
        android:id="@+id/imgViewInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pic_covid_title"
        app:srcCompat="@drawable/covid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/titulo_configuracion" />

        <Switch
            android:id="@+id/switchCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/txt_switch_celsius"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchFahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/txt_switch_fahrenheit"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_btn_guardar" />

    </LinearLayout>



</LinearLayout>