<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.primera_aplicacion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- Este fragment antes era Gallery -->
    <fragment
        android:id="@+id/nav_medicion_temp"
        android:name="com.example.primera_aplicacion.ui.temperature.TemperatureFragment"
        android:label="@string/menu_temp"
        tools:layout="@layout/fragment_temperature" />

    <!-- Este fragment antes era slideshow -->
    <fragment
        android:id="@+id/nav_conversor"
        android:name="com.example.primera_aplicacion.ui.conversor.ConversorFragment"
        android:label="@string/menu_conversor"
        tools:layout="@layout/fragment_conversor" />
</navigation>