<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.TempFragment">

    <ImageView
        android:id="@+id/imgViewInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pic_covid_title"
        app:srcCompat="@drawable/covid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_medicion_temperatura" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/txt_nombre"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/txt_apellidos"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/txt_temperatura"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/txt_ciudad"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etProvincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/txt_provincia"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbCelsius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_switch_celsius" />

            <RadioButton
                android:id="@+id/rbFahrenheit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_switch_fahrenheit" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnFinalizarTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_finalizar" />

    </LinearLayout>

</LinearLayout>