<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".TempResultsActivity">

    <ImageView
        android:id="@+id/imgViewInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pic_covid_title"
        app:srcCompat="@drawable/covid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_resultado_temperatura" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:minHeight="48dp"
                android:background="#00FFFFFF"
                android:text="Francisco Luis"
                android:textColor="@color/blocked_text"
                tools:ignore="Deprecated" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:minHeight="48dp"
                android:background="#00FFFFFF"
                android:text="Fernández Soriano"
                android:textColor="@color/blocked_text"
                tools:ignore="Deprecated" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:minHeight="48dp"
                android:background="#00FFFFFF"
                android:text="35º Celsius"
                android:textColor="@color/blocked_text"
                tools:ignore="Deprecated" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:minHeight="48dp"
                android:background="#00FFFFFF"
                android:text="Orihuela"
                android:textColor="@color/blocked_text"
                tools:ignore="Deprecated" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_etProvincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:minHeight="48dp"
                android:background="#00FFFFFF"
                android:text="Alicante"
                android:textColor="@color/blocked_text"
                tools:ignore="Deprecated" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/view_color_resultado"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/good_temp"
            android:gravity="center"
            android:text="Mensaje"
            android:textAlignment="center"
            android:textColor="@color/blocked_text"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnVolverMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_volverMenu" />

    </LinearLayout>

</LinearLayout>